--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="contener">
         <div class="form">
             <div class="v">
-                <img class="rg"  src="/css/rocket.png" alt="">
+                <img class="rg"  src="rocket.png" alt="">
                     <div class="txt">
                         <h2>LOGIN</h2>
                         <h3>LENDING PACE</h3>
